2020/08/23
- added a lot of class and function comments
- changed the way the progress bar is used during clone process

2020/08/23
- added built-in documentation
- added GPL header in source files
- removed ThreadClone::clone() method, use ThreadClone::run() instead

2020/08/23
- First version copying/deleting successfully directory names (no more files ignored because they are in an non-existing directory)
- cleaned formating of filenames printed the progress windows is now responsibility of the window (make the factory code really simpler to read)

2020/08/22
First working version. Still need improvements
- implemented cloning thread and its progress window
- fixed multiple show() of DiffWindow due to wrong connection
- fixed analyze algorithm. Non-existing files in destination are now created

2020/08/09
- renamed a lot of files, classes and symbol for consistency
- reworked the way Data are structured. Use a singleton now, to get data outside of pre-processing thread

2020/08/07
- started to rework data structure, with a CopyItem object which handle path, filename, size and action to perform

2020/08/02
- source and destinations directories are now analyzed
- analyze performed now by an external thread
- progress shown in an external window

2020/03/14
- initial release
- not working version