@@ -1,5 +1,5 @@
 /*
- * MDC - Multiple Destinations Copier - batch copier to clone a content into several drives at once
+ * 4LN - Multiple Destinations Copier - batch copier to clone a content into several drives at once
  * Copyright (C) 2020 Martial Demolins AKA Folco
  *
  * This program is free software: you can redistribute it and/or modify
@@ -30,8 +30,7 @@ WindowAnalyze::WindowAnalyze(int progresscount) : QWidget(nullptr), ui(new Ui::W
     ui->setupUi(this);
     ui->ProgressBar->setMaximum(1 + progresscount * 2); // +1: source directory. *2: 1 for parsing + 1 for action to take
     setWindowTitle(WINDOW_TITLE);
-    setWindowModality(Qt::ApplicationModal);
-    setWindowFlags(Qt::CustomizeWindowHint | Qt::WindowTitleHint);
+    setWindowFlags(Qt::CustomizeWindowHint | Qt::WindowTitleHint | Qt::WindowMinimizeButtonHint);
     setMinimumWidth(PROGRESS_WINDOW_MIN_WIDTH);
 
     connect(ThreadAnalyze::instance(), &ThreadAnalyze::parsingFile, this, &WindowAnalyze::parsingFile, Qt::QueuedConnection);
